--- a/MixToolz.css
+++ b/MixToolz.css
@@ -1,10 +1,16 @@
 body{
     margin: 0;
     padding: 0;
-    background-image: url('MixTooLz\ Images/Background_image.jpg');
+    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('MixTooLz\ Images/Background_image.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
+}
+
+img{
+    width: 20%;
+    margin: auto;
+    padding: 20px;
 }
 
 p{
