--- a/MixToolz.css
+++ b/MixToolz.css
@@ -10,7 +10,7 @@ body{
 img{
     width:30%;
     margin: auto;
-    padding: 10px;
+    padding: 0px;
 }
 
 p{
@@ -30,3 +30,92 @@ p{
     box-shadow: 10px 20px 10px lemonchiffon inset;
     
 }
+
+.collapsible {
+    background-color: #777;
+    color: white;
+    cursor: pointer;
+    padding: 0px;
+    width: 70%;
+    height: 100px;
+    border: none;
+    text-align: center;
+    outline: none;
+    font-size: 15px;
+  }
+  
+  .active, .collapsible:hover {
+    background-color: #555;
+  }
+  
+  .collapsible:after {
+    content: '\002B';
+    color: white;
+    font-weight: bold;
+    float: right;
+    margin-left: 5px;
+  }
+  
+  .active:after {
+    content: "\2212";
+  }
+  
+  .content1 {
+    padding: 0 18px;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
+    background-color: #f1f1f1;
+  }
+  
+  table, th, td {
+    border-bottom: 2px solid #555;
+  }
+  
+  td {
+    padding: 15px;
+    text-align: left;
+  }
+  
+  th {
+    padding: 15px;
+    text-align: center;
+  }
+  
+  tr:nth-child(even) {background-color: #eaeaea;}
+  
+  .table1 {
+    background-color: #b3b5b3;
+    }
+  
+  .table2 {
+    background-color: #88ffbeea;
+  }
+  
+  
+    .column {
+      float: left;
+      width: 30%;
+      padding: 10px;
+      height: 350px;
+    }
+    
+    .row{
+      margin-left: 65px;
+    }
+  
+    .row:after {
+      content: "";
+      display: table;
+      clear: both;
+      padding: 18px;
+    }
+  
+    @media screen and (max-width: 70%) {
+    .column {
+      width: 100%;
+    }
+  
+  }
+  
+  
