--- a/MixToolz.css
+++ b/MixToolz.css
@@ -32,8 +32,8 @@ p{
 }
 
 .collapsible {
-    background-color: #777;
-    color: white;
+    background-color: #fde360;
+    color: rgb(0, 0, 0);
     cursor: pointer;
     padding: 0px;
     width: 70%;
@@ -41,16 +41,16 @@ p{
     border: none;
     text-align: center;
     outline: none;
-    font-size: 15px;
+    font-size: 20px;
   }
   
 .active, .collapsible:hover {
-    background-color: #555;
+    background-color: #f2ffa0;
 }
   
 .collapsible:after {
     content: '\002B';
-    color: white;
+    color: rgb(0, 0, 0);
     font-weight: bold;
     float: right;
     margin-left: 5px;
@@ -66,6 +66,15 @@ p{
     overflow: hidden;
     transition: max-height 0.2s ease-out;
     background-color: #f1f1f1;
+}
+
+.content button{
+  display: block;
+  margin: 5px;
+  padding-left: 10px;
+  padding-right: 10px;
+  border-radius: 25px;
+  background:#fffecb;
 }
   
 table, th, td {
@@ -117,9 +126,6 @@ tr:nth-child(even) {background-color: #eaeaea;}
 }
 
 .paint{
-  width: 100%;
-  height: fit-content;
-  background: #f4fad1;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -141,15 +147,6 @@ tr:nth-child(even) {background-color: #eaeaea;}
   font-family: 'Courier New', Courier, monospace;
   font-weight: 600;
   color: #000;
-}
-
-.paper img{
-  width: 70%;
-  height: fit-content;
-  display: block;
-  margin-top: auto;
-  margin-bottom: auto;
-  padding: 15px;
 }
 
 .paper label{
