--- a/MixToolz.css
+++ b/MixToolz.css
@@ -15,7 +15,7 @@ body{
 
 p{
     position: center;
-    color: rgb(240, 151, 7);
+    color: rgb(234, 144, 1);
     font-family: 'Courier New', Courier, monospace;
     font-weight: 600;
     font-size: 20px;
@@ -31,6 +31,27 @@ p{
     
 }
 
+#edit{
+  width: 70px;
+  height: 35px;
+  border: none;
+  outline: none;
+  display: inline-flex;
+}
+
+#home, #pdf{
+  width: 120px;
+  height: 35px;
+  border: none;
+  border-radius: 10%;
+  padding: 0px;
+  margin: 5px;
+  background: #353434;
+  color:#f1f1f1;
+  font-weight: 500;
+  display: inline-flex;
+}
+
 .collapsible {
     background-color: #fde360;
     color: rgb(0, 0, 0);
@@ -41,6 +62,8 @@ p{
     border: none;
     text-align: center;
     outline: none;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: 500;
     font-size: 20px;
   }
   
@@ -125,6 +148,23 @@ tr:nth-child(even) {background-color: #eaeaea;}
     }
 }
 
+.container{
+  display: flex;
+  justify-content: center;
+}
+
+.form-group{
+  width: 500px;
+  border: none;
+  border-radius: 10%;
+  margin-top: 12px;
+  margin-bottom: 12px;
+  padding: 10px;
+  text-align: center;
+  background: #fdffeeea;
+  box-shadow: 10px 20px 10px rgb(255, 227, 167);
+}
+
 .wall form{
   display: flex;
   align-items: center;
@@ -139,7 +179,7 @@ tr:nth-child(even) {background-color: #eaeaea;}
   padding: 10px;
   border-radius: 25px;
   text-align: center;
-  box-shadow: 10px 20px 10px rgb(244, 232, 206);
+  box-shadow: 10px 20px 10px rgb(255, 227, 167);
 }
 
 .poster h2{
@@ -148,7 +188,7 @@ tr:nth-child(even) {background-color: #eaeaea;}
   color: #000;
 }
 
-.poster label{
+.poster label, .form-group label, .btn-default{
   width: 150px;
   height: fit-content;
   display: block;
@@ -157,10 +197,9 @@ tr:nth-child(even) {background-color: #eaeaea;}
   font-weight: 600;
   border-radius: 25px;
   background-color: #f5a84a;
-  color: #fd2424;
   cursor: pointer;
 }
 
-.poster input{
+.poster input, .form-group input{
   display: none;
 }
