--- a/MixToolz.css
+++ b/MixToolz.css
@@ -182,7 +182,7 @@ tr:nth-child(even) {background-color: #eaeaea;}
   box-shadow: 10px 20px 10px rgb(255, 227, 167);
 }
 
-.poster h2{
+.poster, .box h2{
   font-family: 'Courier New', Courier, monospace;
   font-weight: 600;
   color: #000;
@@ -299,4 +299,8 @@ tr:nth-child(even) {background-color: #eaeaea;}
   padding: 1em;
   font-size: 1em;
   border-radius: 10px;
+}
+
+.hide{
+  display: none;
 }
