--- a/MixToolz.css
+++ b/MixToolz.css
@@ -64,6 +64,21 @@ p{
   background-color: #ff4a47;
 }
 
+#selectedBanner {
+  width: 100%;
+  height: 400px;
+  border: 1px solid #ccc;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+#selectedBanner img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
 
 
 .collapsible {
