--- a/MixToolz.css
+++ b/MixToolz.css
@@ -184,6 +184,11 @@ p{
   border-radius: 25px;
   background-color: #f5a84a;
   cursor: pointer;
+  transition-duration: .6s;
+}
+
+.poster label{
+  border: 1px solid #fde360;
 }
 
 .poster input, .form-group input{
@@ -249,6 +254,21 @@ p{
   padding: 1em;
   font-size: 1em;
   border-radius: 10px;
+  transition-duration: .6s;
+}
+
+#preview{
+  border: 1px solid #f5a84a;
+  background-color: #f5a84a;
+  text-decoration: none;
+  padding: 1em;
+  font-size: 1em;
+  border-radius: 10px;
+  transition-duration: .6s;
+}
+
+#preview:hover{
+  background-color: #fde360;
 }
 
 .hide{
