--- a/MixToolz.css
+++ b/MixToolz.css
@@ -184,11 +184,6 @@ p{
   border-radius: 25px;
   background-color: #f5a84a;
   cursor: pointer;
-  transition-duration: .6s;
-}
-
-.poster label{
-  border: 1px solid #fde360;
 }
 
 .poster input, .form-group input{
@@ -254,23 +249,50 @@ p{
   padding: 1em;
   font-size: 1em;
   border-radius: 10px;
-  transition-duration: .6s;
-}
-
-#preview{
-  border: 1px solid #f5a84a;
-  background-color: #f5a84a;
-  text-decoration: none;
-  padding: 1em;
-  font-size: 1em;
-  border-radius: 10px;
-  transition-duration: .6s;
-}
-
-#preview:hover{
-  background-color: #fde360;
 }
 
 .hide{
   display: none;
 }
+
+
+/* CSS */
+.button-87 {
+  margin: 10px;
+  padding: 15px 30px;
+  text-align: center;
+  text-transform: uppercase;
+  transition: 0.5s;
+  background-size: 200% auto;
+  color: white;
+  border-radius: 10px;
+  display: block;
+  border: 0px;
+  font-weight: 700;
+  box-shadow: 0px 0px 14px -7px #f09819;
+  background-image: linear-gradient(45deg, #FF512F 0%, #F09819  51%, #FF512F  100%);
+  cursor: pointer;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.button-87:hover {
+  background-position: right center;
+  /* change the direction of the change here */
+  color: #fff;
+  text-decoration: none;
+}
+
+.button-87:active {
+  transform: scale(0.95);
+}
+
+
+
+
+
+
+
+
+
