--- a/MixToolz.css
+++ b/MixToolz.css
@@ -205,6 +205,64 @@ p{
   margin: 0 auto;
 }
 
+.colors .optoins{
+  display: flex;
+  justify-content: space-between;
+}
+
+.colors .option{
+  width: 20px;
+  height: 20px;
+  display: inline-block;
+  background: #000000;
+  border-radius: 50%;
+  margin-left: 3px;
+  position: relative;
+  cursor: pointer;
+}
+
+.colors .option:nth-child(1){
+  background-color: #000000;
+}
+
+.colors .option:nth-child(2){
+  background-color: #ff0000;
+}
+
+.colors .option:nth-child(3){
+  background-color: #fefe00;
+}
+
+.colors .option:nth-child(4){
+  background-color: #00fa25;
+}
+
+.colors .option:nth-child(5){
+  background-color: #0c00f4;
+}
+
+.colors .option:nth-child(6){
+  background-color: #ffffff;
+  border: 1px solid #bfbfbf;
+}
+
+.colors .option:hover::before{
+  position: absolute;
+  content: "";
+  top: 50%;
+  left: 50%;
+  width: 12px;
+  height: 12px;
+  background: inherit;
+  border-radius: inherit;
+  border: 2px solid #ffffff;
+  transform: translate(-50%, -50%);
+}
+
+.color .option:last-child:hover::before{
+  border-color: #ccc;
+}
+
 .aspect-ratio{
   margin-left: 20%;
 }
