--- a/MixToolz.css
+++ b/MixToolz.css
@@ -19,14 +19,14 @@ p{
     color: rgb(234, 144, 1);
     font-family: 'Courier New', Courier, monospace;
     font-weight: 600;
-    font-size: 30px;
+    font-size: 25px;
     border: 1px solid gold;
     border-radius: 25px;
     padding: 20px;
     margin-top: 50px;
     margin-left: 20px;
     margin-right: 20px;
-    max-width: fit-content;
+    max-width: 70%;
     background-color: rgb(250, 244, 117);
     box-shadow: 10px 20px 10px lemonchiffon inset;
 }
