--- a/MixToolz.css
+++ b/MixToolz.css
@@ -26,7 +26,7 @@ p{
   margin-top: 50px;
   margin-left: 20px;
   margin-right: 20px;
-  max-width: 70%;
+  width: fit-content;
   background-color: rgb(250, 244, 117);
   box-shadow: 10px 20px 10px lemonchiffon inset;
 }
