--- a/MixToolz.css
+++ b/MixToolz.css
@@ -103,7 +103,7 @@ background-color: #ff4a47;
   max-height: 0;
   overflow: hidden;
   transition: max-height 0.2s ease-out;
-  background-color: #f1f1f1;
+  background-color: #ffffff;
 }
 
 .content button{
