--- a/MixToolz.css
+++ b/MixToolz.css
@@ -370,3 +370,27 @@ text-decoration: none;
 .button-87:active {
 transform: scale(0.95);
 }
+
+#squarebox{
+  width: 300px;
+  height: 250px;
+  border: none;
+  border-radius: 10px;
+  padding-top: 10px;
+  margin: 5px;
+  background: #f88533;
+  color:#f1f1f1;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  justify-content: center;
+  display: inline-flex; 
+  }
+
+.iconz{
+  width: 50px;
+  height: 50px;
+  }
+
+  
+
