--- a/MixToolz.css
+++ b/MixToolz.css
@@ -288,7 +288,7 @@ opacity: 0;
 cursor: pointer;
 }
 
-.aspect-ratio{
+.aspect-ratio, .rotate, .zoom{
 margin-left: 20%;
 }
 
@@ -298,7 +298,7 @@ font-weight: 600;
 padding-left: 20px;
 }
 
-.aspect-ratio li{
+.aspect-ratio li, .rotate li, .zoom li{
 display: inline-block;
 padding: 10px;
 margin-left: 15px;
@@ -311,12 +311,28 @@ transition-duration: .6s;
 cursor: pointer;
 }
 
-.aspect-ratio li:active{
+.zoom li:active{
 border: 1px solid #f5a84a;
 }
 
-.aspect-ratio li:hover{
+.zoom li:hover{
 background-color: #f7c78d;
+}
+
+.rotate li:active{
+  border: 1px solid #f5a84a;
+}
+  
+.rotate li:hover{
+  background-color: #f7c78d;
+}
+
+.aspect-ratio li:active{
+  border: 1px solid #f5a84a;
+}
+    
+.aspect-ratio li:hover{
+  background-color: #f7c78d;
 }
 
 .btn{
