--- a/MixToolz.css
+++ b/MixToolz.css
@@ -174,6 +174,13 @@ cursor: pointer;
 display: none;
 }
 
+.drop_area{
+  width: 250px;
+  padding: 5px;
+  border: 1px dashed #f5b624;
+  border-radius: 10px;
+}
+
 .tools{
   display: flex;
   flex-direction: row;
