--- a/MixToolz.css
+++ b/MixToolz.css
@@ -174,6 +174,10 @@ cursor: pointer;
 display: none;
 }
 
+.poster #input-file2, .form-group input{
+  display: none;
+  }
+
 .poster .drop_area{
   width: 350px;
   height: 125px;
