--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 body{
   margin: 0;
   padding: 0;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('Images/Bg2.jpg');
+  background-image: linear-gradient(405deg, rgb(210, 210, 210),rgb(0, 0, 0)),linear-gradient(67.5deg, rgba(78, 215, 231,0.5) 0%, rgba(78, 215, 231,0.5) 3%,rgba(80, 186, 233,0.5) 3%, rgba(80, 186, 233,0.5) 17%,rgba(82, 157, 236,0.5) 17%, rgba(82, 157, 236,0.5) 21%,rgba(84, 127, 238,0.5) 21%, rgba(84, 127, 238,0.5) 42%,rgba(86, 98, 241,0.5) 42%, rgba(86, 98, 241,0.5) 74%,rgba(88, 69, 243,0.5) 74%, rgba(88, 69, 243,0.5) 100%),linear-gradient(315deg, rgb(78, 215, 231) 0%, rgb(78, 215, 231) 3%,rgb(80, 186, 233) 3%, rgb(80, 186, 233) 17%,rgb(82, 157, 236) 17%, rgb(82, 157, 236) 21%,rgb(84, 127, 238) 21%, rgb(84, 127, 238) 42%,rgb(86, 98, 241) 42%, rgb(86, 98, 241) 74%,rgb(88, 69, 243) 74%, rgb(88, 69, 243) 100%); background-blend-mode:overlay, overlay, normal;
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -46,13 +46,12 @@ p{
 
 /*Replace id="pdf" to blocks because of id clashing */
 #blocks{
-  width: 140px;
+  width: 135px;
   height: 55px;
-  border: none;
   border-radius: 10px;
   padding-top: 10px;
   margin: 5px;
-  background: #f88533;
+  background: #f86c08;
   color:#f1f1f1;
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-size: 16px;
@@ -67,7 +66,7 @@ p{
 
 /*Collapsible Menu*/
 .collapsible {
-  background-color: #fde360;
+  background-color: rgb(255, 221, 149);
   color: rgb(0, 0, 0);
   cursor: pointer;
   margin: auto;
@@ -83,7 +82,7 @@ p{
 }
 
 .active, .collapsible:hover {
-  background-color: #f2ffa0;
+  background-color: rgb(255, 221, 149);
 }
 
 .collapsible:after {
@@ -103,7 +102,7 @@ p{
   max-height: 0;
   overflow: hidden;
   transition: max-height 0.2s ease-out;
-  background-color: #f1f1f1;
+  background-color: rgb(255, 152, 67);
 }
 
 .content button{
@@ -115,7 +114,7 @@ p{
   background:#fffecb;
 }
 
-@media screen and (max-width: 70%) {
+@media screen and (max-width: 100%) {
 .column {
    width: 100%;
   }
