--- a/index.css
+++ b/index.css
@@ -237,7 +237,7 @@ footer{
   display: contents;
 }
 
-.clean, #text-btn{
+.clean, .text_option span{
   width: 95px;
   height: 20px;
   display: flex;
@@ -446,10 +446,10 @@ footer{
 	box-sizing: border-box;
 	width: 100%;
 	text-align: left;
-	padding: 55px 50px;
+	padding: 20px 20px;
   color:#f1f1f1;
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  font-size: 13px;
+  font-size: 16px;
 }
 
 .footer-distributed .footer-left,
