--- a/index.css
+++ b/index.css
@@ -202,7 +202,7 @@ footer{
   height: 125px;
   display: flex;
   margin: 20px auto;
-  border: 2px dashed #f5b624;
+  border: 2px dashed #f7673b;
   border-radius: 10px;
   align-items: center;
   justify-content: center;
