--- a/index.css
+++ b/index.css
@@ -211,8 +211,8 @@ footer{
 .tools{
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
-  margin: 0;
+  align-items: center;
+  justify-content: center;
 }
 
 .title, .text_option, .selection, .checkbox{
@@ -368,6 +368,7 @@ footer{
 
 .aspect-ratio li, .rotate li, .zoom li{
   display: inline-flex;
+  margin: 10px;
   padding: 10px;
   border-radius: 10px;
   border: 1px solid transparent;
